2024-01-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eloadhistory-for): small changes.

	* eev-elinks.el (ee-find-efunction-links): small changes.

2024-01-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el (ee-find-epackage-linki): new function.

2024-01-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-levels-intro): new intro - currently a
	stub.

	* eev-pdflike.el (ee-find-pdftotext8-text, ee-find-pdf-text8)
	(find-pdftotext8-text, find-pdf-text8): new functions.
	(brpdftxt8l, brpdftxt8d) new functions, generated by a call to
	`code-brfile'.

2024-01-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-wrap-intro): rewrote the section "6. All
	wrapping functions".

2024-01-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wrap.el (ee-wrap-eewrap): small changes.
	(find-eewraptest-links): new function.

	* eev-blinks.el (find-eaproposf, find-eaproposv): make
	interactive.

2024-01-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-copy-rest0): added support for "skip"s that
	are lists made of a number of lines and a string to search for.
	(ee-search-forward-before): new function.

	* eev-intro.el (find-dot-emacs-intro): new intro.

2024-01-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an entry for
	"2024luaso".
	(find-2024gitvideo): new function.

2024-01-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev.el: bumped the version.

	* eev-plinks.el (find-wget0): new function.
	(find-wget): this is now a wrapper around `find-wget0'.

2024-01-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eaproposv): new function.

	* eev-intro.el (find-lua-tutorial-intro): Added two sections about
	CLua1.lua.

2024-01-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-eloadhistory-links): new function.

	* eev-blinks.el (find-eloadhistory-for): new function.

	* eev-elinks.el (ee-find-efunction-links): use `find-eppp' instead