@@ -1,3 +1,11 @@
+2024-02-01  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-blinks.el (find-eloadhistory-for): use `find-elinks-elisp'
+	and `ee-file-name-elc-to-el'.
+
+	* eev-plinks.el (find-lgrep, ee-find-lgrep)
+	(ee-file-name-elc-to-el): new functions.
+
 2024-01-30  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-blinks.el (find-eloadhistory-for): small changes.
